Pequena correccion. Clarificacion.

--- a/tex/tesis.tex
+++ b/tex/tesis.tex
@@ -552,7 +552,7 @@ We will now obtain an expression for the number of windows of a $C$ sequence whi
     \end{aligned}
   \end{equation*}
 
-  and after dividing both sides by $|I|$ and rearranging terms we obtain:
+  and after dividing both sides by $N$ and rearranging terms we obtain:
 
   \begin{equation*}
     \begin{aligned}
@@ -580,7 +580,7 @@ We will now obtain an expression for the number of windows of a $C$ sequence whi
     \frac{(x + 1)^{(x + 1)}}{x^x} = (x + 1) \left(1 + \frac{1}{x} \right)^x
   \end{equation*}
 
-  we can see that for large values of $r$:
+  for $x = r - 1$, we can see that for large values of $r$:
 
   \begin{equation*}
     \frac{p}{N} \le \frac{r^r}{t(r - 1) (r - 1)^{(r - 1)}} = \frac{r}{t(r - 1)} \left( 1 + \frac{1}{r - 1} \right)^{r - 1} \le \frac{r}{t(r - 1)} e
