Agrego prueba completa con criterio de Weyl.

--- a/tex/tesis.bib
+++ b/tex/tesis.bib
@@ -42,9 +42,28 @@
   url="https://doi.org/10.1007/BF01937504"
 }
 
-@misc{weisstein-2019,
-    author   = {Weisstein, Eric W.},
-    title    = {Equidistributed Sequence. {From MathWorld--A Wolfram Web Resource}},
-    url      = {\url{http://mathworld.wolfram.com/EquidistributedSequence.html}},
-    note     = {Last visited on 31/7/2019},
+@article{weyl-1916,
+  author="Weyl, Hermann",
+  title="{\"U}ber die Gleichverteilung von Zahlen mod. Eins",
+  journal="Mathematische Annalen",
+  year="1916",
+  month="Sep",
+  day="01",
+  volume="77",
+  number="3",
+  pages="313--352",
+  issn="1432-1807",
+  doi="10.1007/BF01475864",
+  url="https://doi.org/10.1007/BF01475864"
+}
+
+@book{mccarthy-1986,
+  title={Introduction to arithmetical functions},
+  author={McCarthy, P.J.},
+  isbn={9780387962627},
+  lccn={85026068},
+  series={Universitext Series},
+  url={https://books.google.com.ar/books?id=wAPvAAAAMAAJ},
+  year={1986},
+  publisher={Springer-Verlag}
 }
